--- a/insta_clone/pubspec.yaml
+++ b/insta_clone/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  # 외부 라이브러리 중 하나.
   cupertino_icons: ^0.1.2
+  image_picker: ^0.6.3+4
 
 dev_dependencies:
   flutter_test:
