2020-03-28 :: Connecting Firebase in Google

--- a/insta_clone/pubspec.yaml
+++ b/insta_clone/pubspec.yaml
@@ -24,7 +24,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # 외부 라이브러리 중 하나.
   cupertino_icons: ^0.1.2
-  image_picker: ^0.6.3+4
+  image_picker: ^0.6.4
+
+  #회원가입 버튼 이미지(?)를 지원해주는 라이브러리를 가져온다.
+  flutter_signin_button: ^1.0.0
+
+  #Google Authentication API
+  google_sign_in: ^4.3.0
+
+  #Firebase Authentication API
+  firebase_auth: ^0.15.5+3
+
+  # Firebase DB API
+  cloud_firestore: ^0.13.4+2
+  firebase_storage: ^3.1.5
 
 dev_dependencies:
   flutter_test:
